import org.gradle.internal.os.OperatingSystem

plugins {
    id 'java'
    id 'com.diffplug.spotless' version '6.25.0'
}

group = 'dev.ptxcy.game'
version = '0.2-release'
project.ext.lwjglVersion = "3.3.6"
project.ext.jomlVersion = "1.10.8"

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(24)
    }
}

switch (OperatingSystem.current()) {
    case OperatingSystem.LINUX:
        project.ext.lwjglNatives = "natives-linux"
        def osArch = System.getProperty("os.arch")
        if (osArch.startsWith("arm") || osArch.startsWith("aarch64")) {
            project.ext.lwjglNatives += osArch.contains("64") || osArch.startsWith("armv8") ? "-arm64" : "-arm32"
        } else if  (osArch.startsWith("ppc")) {
            project.ext.lwjglNatives += "-ppc64le"
        } else if  (osArch.startsWith("riscv")) {
            project.ext.lwjglNatives += "-riscv64"
        }
        break
    case OperatingSystem.MAC_OS:
        project.ext.lwjglNatives = "natives-macos-arm64"
        break
    case OperatingSystem.WINDOWS:
        project.ext.lwjglNatives = "natives-windows"
        break
}
repositories {
    mavenCentral()
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    implementation platform("org.lwjgl:lwjgl-bom:$lwjglVersion")
    implementation "org.lwjgl:lwjgl"
    implementation "org.lwjgl:lwjgl-glfw"
    implementation "org.lwjgl:lwjgl-nuklear"
    implementation "org.lwjgl:lwjgl-opengl"
    implementation "org.lwjgl:lwjgl-stb"
    implementation "org.lwjgl:lwjgl::$lwjglNatives"
    implementation "org.lwjgl:lwjgl-glfw::$lwjglNatives"
    implementation "org.lwjgl:lwjgl-nuklear::$lwjglNatives"
    implementation "org.lwjgl:lwjgl-opengl::$lwjglNatives"
    implementation "org.lwjgl:lwjgl-stb::$lwjglNatives"
    implementation "org.joml:joml:${jomlVersion}"
    implementation 'com.google.code.gson:gson:2.10.1'
    implementation("de.articdive:jnoise-pipeline:4.1.0")

    implementation 'org.apache.logging.log4j:log4j-api:2.24.3'
    runtimeOnly 'org.apache.logging.log4j:log4j-core:2.24.3'

    compileOnly 'org.projectlombok:lombok:1.18.38'
    annotationProcessor 'org.projectlombok:lombok:1.18.38'
    testCompileOnly 'org.projectlombok:lombok:1.18.38'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.38'
}

tasks.register("runEngine", Exec) {
    group = "application"
    description = "Builds and runs the engine JAR"

    dependsOn tasks.build

    workingDir = layout.buildDirectory.dir("libs").get().asFile

    def sceneConfigSource = layout.projectDirectory.file("src/main/resources/SceneConfig.json").asFile.absolutePath

    def cmd = ["java"]
    if (OperatingSystem.current() == OperatingSystem.MAC_OS) {
        cmd += ["-XstartOnFirstThread"]
    }
    cmd += ["--enable-native-access=ALL-UNNAMED"]
    cmd += ["-Dscene.config.source=" + sceneConfigSource]
    cmd += ["-jar", jar.archiveFile.get().asFile.name]

    commandLine(cmd)
}

jar {
    manifest {
        attributes(
                'Main-Class': 'dev.ptxy.engine.PbrTestLauncher',
                'Enable-Native-Access': 'ALL-UNNAMED'
        )
    }

    duplicatesStrategy = DuplicatesStrategy.EXCLUDE

    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
}

test {
    useJUnitPlatform()
}

spotless {
    java {
        googleJavaFormat('1.22.0').aosp().reflowLongStrings()
        importOrder()
        removeUnusedImports()
    }
}